# Alg

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  affichage.cpp  alg.h  alg_bicg.h  alg_bicg_dir.h  alg_bicg_ilu.h  alg_bicg_ilu_dir.h  alg_cg.h  alg_cg_dir.cpp  alg_cg_dir.h  alg_cg_ilu.h  alg_cg_ilu_dir.h  alg_coeff.h  alg_core.h  alg_denseMat.h  alg_iter.h  alg_lu.h  alg_sparseMat.h  alg_sparseVect.h  assemblage.cpp  chapeaux.cpp  config.h.in  ellipse.geo  ellipse.msh  fem.h  femutil.cpp  howto_ellipsemsh.txt  integrales.cpp  lecture.cpp  main.cpp  mainpage.dox  readme.md  savesol.cpp  savevtk.cpp  solve.cpp
src/: CMakeLists.txt  Doxyfile  alg.h  alg_bicg.cpp  alg_bicg.h  alg_bicg_dir.cpp  alg_bicg_dir.h  alg_bicg_ilu.cpp  alg_bicg_ilu.h  alg_bicg_ilu_dir.cpp  alg_bicg_ilu_dir.h  alg_cg.cpp  alg_cg.h  alg_cg_dir.cpp  alg_cg_dir.h  alg_cg_ilu.cpp  alg_cg_ilu.h  alg_cg_ilu_dir.cpp  alg_cg_ilu_dir.h  alg_coeff.h  alg_core.h  alg_iter.h  alg_lu.cpp  alg_lu.h  alg_sparseMat.h  alg_sparseVect.h  alg_utils.h  config.h.in
src/GPU/: CMakeLists.txt  GPU_coeff.h  GPU_core.h  GPU_sparseVect.h  add.cu  alg_GPU.h  cg.cu  cg.h  core.cu  gpu_utils.h  hello.cu  infos.cu  precond_cg.cu  pscal.cu  sparseVect.cu  test_cg.cu
tests/: CMakeLists.txt  ut_cg_dir.cpp  ut_coeff.cpp  ut_core.cpp  ut_sparseMat.cpp  ut_sparseVect.cpp  ut_utils.cpp
